--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,15 @@
   width: 153px;
   float: left;
 }
-
+html {
+  height: 1280px !important;   
+  width: 720px !important;   
+  overflow: hidden;   
+  position: absolute !important;   
+  -webkit-user-select: none;   
+  -khtml-user-select: none;
+  user-select: none;
+}
 body {
   z-index: 0;
 }
@@ -59,7 +67,6 @@ h2 {
   display: inline-block;
   vertical-align: middle;
 }
-/*start here */
 .forecastGrid_load {
   display: inline-block;
   vertical-align: middle;
@@ -136,7 +143,6 @@ div.awxCurrentConditions {
 }
 img.icon {
   width: 100px;
-  /* float: left; */
 }
 .fiveDay > img.icon {
   width: 216px;
@@ -174,10 +180,7 @@ img.icon {
   line-height: 95%;
 }
 .itemText {
-  /* display: inline-block; */
-  /* vertical-align: middle; */
   text-align: center;
-  /* margin-top: 8px; */
 }
 .moreInfo {
   width: 600px;
@@ -299,7 +302,6 @@ sup {
 input#awxSearchTextBox {}
 .hour_temp  {
   font-weight: bold;
-  /* font-size: .75em; */
 }
 .hourly > p {
   color: #333;
@@ -313,7 +315,6 @@ input#awxSearchTextBox {}
   padding-top: 2px;
   font-size: .85em;
 }
-
 span.fontSizeSmall {
   padding: 10px;
 }
@@ -378,7 +379,6 @@ div#removeLocation {
 
 div {
     position: relative;
-    /* font-size: 1em; */ 
 }
 
 * {
