DNA Weather styling, sizing 44% up.
Change-Id: I4bf406249f911620800c367ce1620a8add1b9ab1

--- a/css/style.css
+++ b/css/style.css
@@ -1,35 +1,20 @@
 /* Styles specific to Weather app */
 weatherIcon {
-	width: 75px;
+  width: 75px;
 }
-html {
-  height: 1280px !important;   
-  width: 720px !important;   
-  overflow: hidden;   
-  position: absolute !important;   
-  -webkit-user-select: none;   
-  -khtml-user-select: none;
-  user-select: none;
-}
+
 body {
-  font-size: .775em;
-  width: 720px;
-  height: 1000px;
-  margin: 0;
-  height: 1280px !important;
-  width: 720px !important;
-  overflow: hidden;
   z-index: 0;
 }
 
 h2 {
-  color: #FFF;
-  padding: 10px 0 0 20px;
-  font-size: 3em;
+  /* color: #FFF; */
+  padding: 14px 0 0 28px;
+  /* font-size: 3em; */
   text-transform: uppercase;
   text-align: center;
   margin-top: -45px;
-  margin-bottom: 5px;
+  margin-bottom: 7px;
 }
 
 #locList {
@@ -40,11 +25,11 @@ h2 {
 .itemList {
   position: absolute;
   display: block;
-  top: 147px;
+  top: 212px;
   left: 0px;
-  height: 956px;
-  border-style: solid;
-  border-width: 2px;
+  height: 1450px;
+/*  border-style: solid;
+  border-width: 2px;*/
   overflow-y: scroll;
   overflow-x: hidden;
   -webkit-overflow-scrolling: touch;
@@ -53,36 +38,36 @@ h2 {
   position: relative;
   display: block;
   visibility: visible;
-  height: 5000px;
-  width: 716px;
+  height: 1573px;
+  width: 1076px;
 }
 .locListItemInner {
   position: relative;
   overflow: hidden;
 }
 .locListItem {
-  width: 2160px;
+  width: 3110px;
   overflow: hidden;
   border-top: 1px solid rgba(0, 128, 191, 1.0);
   border-bottom: 1px solid rgba(0, 128, 191, 1.0);
-  margin-bottom: 10px;
+  margin-bottom: 14px;
   margin-top: 0;
 }
 .forecastGrid {
   display: inline-block;
   vertical-align: middle;
 }
+/*start here */
 .forecastGrid_load {
   display: inline-block;
   vertical-align: middle;
-  width: 716px;
-  height: 120px;
+  width: 1031px;
+  height: 173px;
   background: #b3ceee;
   font-family: verdana,arial,sans-serif;
-  font-size: 16px;
   z-index: -3;
   margin-right: -3px;
-  padding-left: 4px;
+  padding-left: 6px;
 }
 .listItem_load {
   display: inline-block;
@@ -95,31 +80,32 @@ h2 {
 .listItem {
   display: inline-block;
   vertical-align: middle;
-  width: 716px;
+  width: 1031px;
   background-color: rgba(29, 162, 255, 0.4);
   margin-top: 0;
-  height: 122px;
+  height: 176px;
 }
 div.awxCurrentConditions {  
   background: -webkit-linear-gradient(left, #000000 0%,transparent 20%,transparent 80%,#000000 100%);
-	height: 120px;
+  
+  height: 173px;
 }
 .hourly {
   /*background: #b3ceee; eventually this should pull from the javascript and 
   discern whether or not it's a day or night background color (#1d274f) */
   float: left;
   text-align: center;
-  width: 118px;  
+  width: 170px;  
   border-left:none;
-  padding-top: 2px;
-  padding-bottom: 6px;
+  padding-top: 3px;
+  /* padding-bottom: 9px; */
 }
 .fiveDay {
   float: left;
   text-align: center;
-  width: 142px;
-  padding-top: 2px;
-  padding-bottom: 11px;
+  width: 204px;
+  padding-top: 3px;
+  padding-bottom: 13px;
 }
 .locName {
   text-transform: uppercase;
@@ -133,7 +119,7 @@ div.awxCurrentConditions {
   display: inline-block;
   vertical-align: middle;
   float: left;
-  margin-top: 15px;
+  margin-top: 22px;
 }
 img.icon {
   width: 100px;
@@ -141,7 +127,7 @@ img.icon {
 .fiveDay > img.icon {
   width: 150px;
   position: relative;
-  margin-top: -10px;
+  /* margin-top: 0px; */
   left: 0px;
   z-index: -1;
 }
@@ -150,10 +136,11 @@ img.icon {
   margin-top: -5px;
   line-height: 15px;
   margin-bottom: 13px;
+  font-size: .75em;
 }
 .fiveDay > .iconPhrase  {
-  margin-top: -75px;
-  margin-bottom: 25px;
+  margin-top: -67px;
+  margin-bottom: 35px;
 }
 .tempBox {
   display: inline-block;
@@ -221,8 +208,8 @@ sup {
   font-size: 50%;
 }
 .L_indicator {
-  margin-left: 10px;
-  margin-right: 5px;
+  margin-left: 14px;
+  margin-right: 7px;
 }
 .R_indicator {
   margin-left: 10px;
@@ -251,30 +238,31 @@ sup {
   border: 1px solid rgb(128, 203, 255);
 }
 #awxSearchButton {
-  height: 50px;
-  width: 130px;
+  height: 72px;
+  width: 187px;
   background-color: #245f88;
   color: rgb(128, 203, 255);
   text-transform: uppercase;
   border: 1px solid rgba(128, 203, 255, 1);
-  margin-left: 5px;
+  margin-left: 7px;
 }
 #awxSearchTextBox {
   padding-left: 10px;
-  margin: 5px 5px 10px 0;
+  margin: 7px 7px 14px 0;
   border: none;
   background-color: #fff;
-  width: 400px;
-  height: 50px;
+  width: 576px;
+  height: 72px;
   color: #404040;
   font-family: sans-serif, "Arial";
 }
 .hour_temp  {
   font-weight: bold;
-  font-size: 16px;
+  font-size: .75em;
 }
 .hourly > p {
   color: #333;
+  font-size: .85em;
 }
 .hour {
   font-weight: bold;
@@ -282,39 +270,35 @@ sup {
 .weekday {
   font-weight: bold;
   padding-top: 2px;
+  font-size: .85em;
 }
-.articleClose {
-  display: block;
-  position: absolute;
-  top: 1051px;
-  left: 667px;
-  width: 40px;
-  height: 40px;
-  border-width: 1px;
-  border-style: solid;
-  text-align: center;
-  vertical-align: middle;
-  line-height: 22px;
-  z-index: 11;
-  padding: 5px 5px 5px 5px;
-  letter-spacing:  5px;
-}
+
 span.fontSizeSmall {
   padding: 10px;
 }
 
 #locationModal{
-	display:none;
-  width: 550px;
-  margin: 0 auto;
-  top:40%;
+  display:none;
+/*  max-width: 100%;
   background-color: rgba(0,0,0,0.8);
   -webkit-box-shadow: 0 0 90px rgba(135,181,213,0.8);
-  padding: 10px;
+  padding: 14px;
+  text-align: center;*/
 }
-
+.center-modal {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: rgba(0,0,0,0.8);
+  -webkit-box-shadow: 0 0 90px rgba(135,181,213,0.8);
+  padding: 14px;
+  text-align: center;
+}
+.location-search {
+  max-width: 50%;
+}
 .removeLocationControl{
-	display: none;
+  display: none;
   border: 1px solid rgb(128, 203, 255);
   width: 35px;
   height: 35px;
@@ -327,37 +311,37 @@ span.fontSizeSmall {
   margin-left: -105px;
 }
 div#addLocation {
-  display: inline-block;
-  float:right;
-  top:1024px;
-  width: 80px;
-  height: 80px;
-  line-height: 70px;
+  /* display: block; */
+  /* float:right; */
+  width: 115px;
+  height: 115px;
+  line-height: 110px;
   text-align: center;
   border: 1px solid rgb(128, 203, 255);
+  font-size: 140px;
 }
 div#removeLocation {
-  display: inline-block;
-  float:left;
-  top:1024px;
-  width: 80px;
-  height: 80px;
-  line-height: 70px;
+  /* display: block; */
+  /* float:left; */
+  width: 115px;
+  height: 115px;
+  line-height: 0px;
   text-align: center;
   border: 1px solid rgb(128, 203, 255);
+  font-size: 135px;
 }
 
 .bottomPanelLogo.bottomPanelLogoImg {
-	background-image:url('../images/accuweather_icon.png');
-	background-repeat: no-repeat;
-	margin-top: 35px;
-	margin-left: -35px;
-	width: 285px !important;
+  background-image:url('../images/accuweather_icon.png');
+  background-repeat: no-repeat;
+  margin-top: 35px;
+  margin-left: -35px;
+  width: 285px !important;
 }
 
 div {
     position: relative;
-    font-size: .775em; 
+    /* font-size: 1em; */ 
 }
 
 * {
@@ -367,6 +351,8 @@ div {
 }
 p, ul, li {
   color: #333;
+  font-size: .75em;
+  margin-bottom: 0px;
 }
 li {
     margin-left: 0;
@@ -380,10 +366,12 @@ ul {
     list-style: none;
 }
 
-.borderColorLight {
-    border-color: rgb(128, 203, 255);   
-    border-color: rgba(128, 203, 255, 1.0);
+.border {
+    /*border-color: rgb(128, 203, 255);   
+    border-color: rgba(128, 203, 255, 1.0);*/
+    border: 2px solid rgba(255,255,255, 0.5);
 }
+
 .boxShadow4 {
   box-shadow: 0 0 70px 2px rgba(29, 162, 255, 0.4);
 }
@@ -482,4 +470,12 @@ input {
 .inputBox .nextButton:active {
   top: 1px;
   right: 1px;
+}
+.bottom {
+    display: flex;  
+    align-items: flex-end;    
+    justify-content: space-between;
+    margin-bottom: 135px;
+    /* flex: 1; */
+    /* width: 98%; */
 }
