--- a/css/style.css
+++ b/css/style.css
@@ -23,8 +23,8 @@ h2 {
   /* text-transform: uppercase; */
   /* text-align: center; */
   /* margin-top: -45px; */
-  margin-bottom: 7px;
-  float: left;
+  /* margin-bottom: 7px; */
+  /* float: left; */
 }
 
 #locList {
@@ -60,7 +60,7 @@ h2 {
   overflow: hidden;
   border-top: 1px solid rgb(83, 181, 206);
   border-bottom: 1px solid rgb(83, 181, 206);
-  /* margin-bottom: 14px; */
+  margin-bottom: 15px; 
   margin-top: 0;
 }
 .forecastGrid {
@@ -270,12 +270,12 @@ sup {
 }
 #searchResults > li {
   color: #fff;
-  font-size: 2em;
-  font-family: Arial, sans-serif;
-  margin: 10px 0;
+  font-size: 1em;
+  /*font-family: Arial, sans-serif;*/
+  margin: 10px;
   padding: 5px 15px;
-  background-color: #245f88;
-  border: 1px solid rgb(128, 203, 255);
+  background-color: rgba(83, 181, 206, .5);
+  border: 1px solid rgb(83, 181, 206);
 }
 #awxSearchButton {
   /* height: 72px; */
@@ -284,7 +284,7 @@ sup {
   /* color: rgb(128, 203, 255); */
   /* text-transform: uppercase; */
   /* border: 1px solid rgba(128, 203, 255, 1); */
-  /* margin-left: 7px; */
+   margin-top: 0; 
   float: right;
 }
 #awxSearchTextBox {
@@ -293,13 +293,12 @@ sup {
   /* border: none; */
   /* background-color: #fff; */
   /* width: 576px; */
-  /* height: 72px; */
+   height: 60px; 
   /* color: #404040; */
   /* font-family: sans-serif, "Arial"; */
   float: left;
 }
 
-input#awxSearchTextBox {}
 .hour_temp  {
   font-weight: bold;
 }
@@ -337,16 +336,23 @@ span.fontSizeSmall {
 
 .removeLocationControl{
   display: none;
-  border: 1px solid rgb(128, 203, 255);
-  width: 35px;
-  height: 35px;
-  background-color: rgba(58, 174, 255, 0.5);
-  color: rgba(255, 255, 255, 1.0);
-  font-size: 30px;
-  line-height: 35px;
+  border: 1px solid rgb(83, 181, 206);
+  width: 60px;
+  height: 60px;
+  background-color: rgba(83, 181, 206, .5);
+  /*color: rgba(255, 255, 255, 1.0);*/
+/*  font-size: 30px;
+  line-height: 35px;*/
   float: left;
-  margin-top: 65px;
-  margin-left: -105px;
+  margin-top: 55px;
+  margin-left: -109px;
+}
+
+.removeLocationControl::after {
+  content:  "\00d7";
+  font-size: 80px;
+  line-height: 52px;
+  color: rgba(255, 255, 255, 1.0);
 }
 div#addLocation {
   /* display: block; */
@@ -355,8 +361,9 @@ div#addLocation {
   height: 115px;
   line-height: 110px;
   text-align: center;
-  border: 1px solid rgb(128, 203, 255);
+  border: 1px solid rgb(83, 181, 206);
   font-size: 140px;
+  background-color: rgba(83, 181, 206, .5);
 }
 div#removeLocation {
   /* display: block; */
@@ -365,8 +372,9 @@ div#removeLocation {
   height: 115px;
   line-height: 0px;
   text-align: center;
-  border: 1px solid rgb(128, 203, 255);
+  border: 1px solid rgb(83, 181, 206);
   font-size: 135px;
+  background-color: rgba(83, 181, 206, .5);
 }
 
 .bottomPanelLogo.bottomPanelLogoImg {
@@ -514,4 +522,7 @@ input {
     margin-bottom: 135px;
     /* flex: 1; */
     /* width: 98%; */
+}
+.app-icon {
+  background-image: "images/accuweather_icon.png";
 }
