Overrides list margin in settings
Change-Id: Ic2bf6cab2c6b0ff986f4e34aa4b3b2f9ae54f453

--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,9 @@
+/* Settings Overrides */
+
+.settingElement {
+  margin: 0 40px; 
+}
+
 /* Styles specific to Weather app */
 .weatherIcon {
   width: 153px;
