Weather: fixed the image for the 5 day forecast
Change-Id: Id3760a3eb27dcf17ecc284c0185ddb94410440e5

--- a/css/style.css
+++ b/css/style.css
@@ -154,7 +154,7 @@ img.icon {
 }
 .fiveDay > img.icon {
   width: 216px;
-  position: relative;
+  /*position: relative;*/
   margin-top: -9px;
   left: 0px;
   z-index: -1;
