Prevents zooming and scrolling on touch where not specified

--- a/css/style.css
+++ b/css/style.css
@@ -29,7 +29,7 @@ html {
    margin-top: 116px; 
   overflow-y: scroll;
   overflow-x: hidden;
-  -webkit-overflow-scrolling: touch;
+  touch-action: pan-y;
 }
 #locListInner {
   visibility: visible;
